# scikit-surgerygoicp

./: .travis.yml  CMakeLists.txt  CTestConfig.cmake  INSTALLATION.txt  README.md  README.txt  Usesksurgerygoicp.cmake.in  a.txt  appveyor.yml  config.sh  setup.py  sksurgerygoicpConfig.cmake.in  sksurgerygoicpConfigure.h.in  travis_cmake_build.sh  versioneer.py
.github/workflows/: builld_test_python.yml  deploy_linux.yml  deploy_mac.yml  deploy_windows.yml
CMake/: CPackOptions.cmake.in  CPackSetup.cmake  CTestContinuous.cmake.in  CTestCustom.cmake.in  FindEigen.cmake  Findgflags.cmake.in  Findglog.cmake.in  StartVS.bat.in  SuperBuild.cmake  sksgoicpAddArrayFire.cmake  sksgoicpAddBoost.cmake  sksgoicpAddDocs.cmake  sksgoicpAddEigen.cmake  sksgoicpAddFLANN.cmake  sksgoicpAddGuiProjects.cmake  sksgoicpAddOpenCV.cmake  sksgoicpAddPCL.cmake  sksgoicpAddPythonBindings.cmake  sksgoicpAddUnityWrapper.cmake  sksgoicpAddVTK.cmake  sksgoicpAddgflags.cmake  sksgoicpAddglog.cmake  sksgoicpExternalProjectHelperMacros.cmake  sksgoicpFunctionFixInstallNameForMac.cmake  sksgoicpIncludeArrayFire.cmake  sksgoicpIncludeBoost.cmake  sksgoicpIncludeCUDA.cmake  sksgoicpIncludeDocs.cmake  sksgoicpIncludeEigen.cmake  sksgoicpIncludeMPI.cmake  sksgoicpIncludeOpenCV.cmake  sksgoicpIncludeOpenMP.cmake  sksgoicpIncludePCL.cmake  sksgoicpIncludePythonBindings.cmake  sksgoicpIncludeQt.cmake  sksgoicpIncludeVTK.cmake  sksgoicpIncludegflags.cmake  sksgoicpIncludeglog.cmake  sksgoicpMacroCreateGuiApplication.cmake  sksgoicpMacroInstallCommandLineApp.cmake  (+8 more)
CMake/ExternalProjects/: ArrayFire.cmake  Boost.cmake  Eigen.cmake  FLANN.cmake  OpenCV.cmake  PCL.cmake  VTK.cmake  gflags.cmake  glog.cmake
Code/: CMakeLists.txt
Code/CommandLineApps/: CMakeLists.txt  sksgoicpMyFirstApp.cpp
Code/Lib/: CMakeLists.txt  jly_3ddt.hpp  jly_goicp.cpp  jly_goicp.h  jly_goicp.hpp  jly_icp3d.hpp  jly_main.cpp  jly_sorting.hpp  matrix.hpp  sksgoicpBasicTypes.cpp  sksgoicpBasicTypes.h  sksgoicpException.cpp  sksgoicpException.h  sksgoicpExceptionMacro.h  sksgoicpMyFunctions.cpp  sksgoicpMyFunctions.h  sksgoicpWin32ExportHeader.h
Code/PythonPyBind/: CMakeLists.txt  sksgoicpLibPython.cpp
Documentation/: CMakeLists.txt  License.dox  MainPage.dox.in
Testing/: CMakeLists.txt  mpCudaTest.cu  sksgoicpBasicTest.cpp  sksgoicpCatchMain.cpp  sksgoicpCatchMain.h  sksgoicpCommandLineArgsTest.cpp  test.py
Testing/Data/: expected_transform.txt
Utilities/CppCheck/: SKSURGERYGOICPCppCheck.cmake
Utilities/Doxygen/: doxygen.config.in  sksurgerygoicpdoxygen.pl.in
Utilities/KWStyle/: SKSURGERYGOICPHeader.h  SKSURGERYGOICPKWS.xml.in  SKSURGERYGOICPKWStyle.cmake
